# hwtGraph

./: .coveragerc  .gitignore  .project  .travis.yml  README.md  pyproject.toml  setup.py
doc/: conf.py  index.rst
hwtGraph/elk/: __init__.py
hwtGraph/elk/containers/: constants.py  idStore.py  lEdge.py  lNode.py  lPort.py  pathPrefix.py
hwtGraph/elk/fromHwt/: connectSignalToStatements.py  convertor.py  defauts.py  extractSplits.py  flattenPorts.py  flattenTrees.py  mergeSplitsOnInterfaces.py  netCtx.py  netlistPreprocessors.py  propagatePresets.py  reduceUselessAssignments.py  resolveSharedConnections.py  sortStatementPorts.py  statementRenderer.py  statementRendererUtils.py  utils.py
hwtGraph/tests/: conversibility_test.py  mergeSplitsOnInterfaces_test.py
tests/: all.py  conversibility_test.py
